--- a/config.yaml
+++ b/config.yaml
@@ -1,6 +1,5 @@
 jenkins:
-  systemMessage: "推荐使用 Jenkins 的客户端工具 https://github.com/LinuxSuRen/jenkins-cli 管理\
-    你的 Jenkins。练习时，每个人以自己的名字创建对应的文件夹，并在里面进行操作。"
+  systemMessage: "Jenkins 中文社区"
   agentProtocols:
   - "JNLP4-connect"
   - "Ping"
@@ -24,8 +23,8 @@ jenkins:
   - kubernetes:
       name: kubernetes
       credentialsId: "c6369e96-009b-44fe-9090-c65eb6030334"
-      jenkinsTunnel: jenkins.jd.surenpi.com:50000
-      jenkinsUrl: http://jenkins.jd.surenpi.com:12345
+      jenkinsTunnel: ci.surenpi.com:50000
+      jenkinsUrl: http://ci.surenpi.com
       maxRequestsPerHostStr: "32"
       namespace: default
       serverUrl: https://117.48.228.41:6443
@@ -33,16 +32,16 @@ jenkins:
       containerCapStr: ""
       skipTlsVerify: true
       templates:
-      - name: java
-        label: java
+      - name: golang-1.12
+        label: golang-1.12
         podRetention: never
         nodeUsageMode: NORMAL
         instanceCapStr: "5"
         containers:
-        - name: java
+        - name: golang
           args: cat
           command: /bin/sh -c
-          image: docker.io/openjdk
+          image: index.alauda.cn/alaudaorg/builder-go:1.12-ubuntu-v0.1.7
           livenessProbe:
             failureThreshold: 0
             initialDelaySeconds: 0
@@ -56,13 +55,15 @@ jenkins:
           resourceRequestMemory: 750M
           privileged: false
           ttyEnabled: true
-      - name: golang
-        label: golang
+      - name: hugo
+        label: hugo
+        podRetention: never
+        nodeUsageMode: NORMAL
+        instanceCapStr: "5"
         containers:
-        - name: golang
-          args: cat
-          command: /bin/sh -c
-          image: docker.io/golang
+        - name: jnlp
+          args: ${computer.jnlpmac} ${computer.name}
+          image: docker.io/surenpi/hugo-jnlp-agent
           livenessProbe:
             failureThreshold: 0
             initialDelaySeconds: 0
@@ -71,14 +72,8 @@ jenkins:
             timeoutSeconds: 0
           alwaysPullImage: false
           resourceLimitCpu: 1
-          resourceLimitMemory: 1500M
+          resourceLimitMemory: 2500M
           resourceRequestCpu: 500m
           resourceRequestMemory: 750M
           privileged: false
           ttyEnabled: true
-        podRetention: never
-        nodeUsageMode: NORMAL
-        instanceCapStr: "5"
-        workspaceVolume:
-          emptyDirWorkspaceVolume:
-            memory: false
